--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,3 +1,5 @@
+# CMakeLists modified from: http://www.opengl-tutorial.org/download/
+
 if(MSVC AND NOT "${MSVC_VERSION}" LESS 1400)
 	add_definitions( "/MP" )
 endif()
